test/classes/initializers/parentCall/inBeginOn.good
inBeginOn.chpl:4: In initializer:
inBeginOn.chpl:7: error: use of super.init() call in an on block
